<resources>
    <string name="app_name">Book Flight</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="Depart">Depart</string>
    <string name="Return">Return</string>
    <string name="Sumar">+</string>
    <string name="Restar">-</string>
    <string name="Buscar">Search Flights</string>
    <string name="roundtrip">RountTrip</string>
    <string name="history">History</string>
    <string name="mas_tickets">+</string>
    <string name="non_stop">Non Stop</string>
    <string name="one_stop">One Stop</string>
    <string name="_2_or_more">2 Or More</string>
    <string name="one_way">One Way</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="send">Enviar</string>
    <string name="one">1</string>
    <string name="description_less">button to quit passengers</string>
</resources>