<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:orientation="horizontal"
            android:rowCount="7"
            android:useDefaultMargins="true">

            <RadioGroup
                android:id="@+id/travelType"
                android:layout_columnSpan="2"
                android:layout_gravity="fill"
                android:orientation="horizontal"
                android:checkedButton="@id/roundtrip">

                <RadioButton
                    android:id="@+id/roundtrip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Roundtrip" />

                <RadioButton
                    android:id="@+id/oneWay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="One way" />
            </RadioGroup>

            <Button
                android:id="@+id/history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="History" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:layout_gravity="fill">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="3"
                    android:layout_gravity="fill"
                    android:hint="@string/From"
                    android:imeOptions="actionNext"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:layout_gravity="fill">

                <EditText
                    android:id="@+id/to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="3"
                    android:layout_gravity="fill"
                    android:hint="@string/To"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/depart"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/Depart"
                    android:imeOptions="actionNext"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/comeback"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/Return"
                    android:imeOptions="actionNext"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>
            <TableRow
                android:id="@+id/passengers"
                android:layout_gravity="end">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/lessTickets"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/design_default_color_primary"
                    android:tint="@color/design_default_color_primary"
                    app:borderWidth="0dp"
                    app:fabSize="mini"
                    android:src="@drawable/icons8_menos_24"/>

                <EditText
                    android:id="@+id/tickets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:text="0"
                    android:tooltipText="Passengers" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/moreTickets"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    app:fabSize="mini"
                    android:backgroundTint="@color/design_default_color_primary"
                    android:tint="@color/design_default_color_primary"
                    app:borderWidth="0dp"
                    android:src="@drawable/outline_add_white_48"/>
            </TableRow>

            <RadioGroup
                android:id="@+id/numberOfStops"
                android:layout_columnSpan="3"
                android:layout_gravity="fill"
                android:orientation="horizontal"
                android:checkedButton="@id/nonStop">

                <RadioButton
                    android:id="@+id/nonStop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Non stop" />

                <RadioButton
                    android:id="@+id/oneStop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="One stop" />

                <RadioButton
                    android:id="@+id/twoStop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2 or more" />
            </RadioGroup>

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:layout_gravity="center"
                android:drawableRight="@drawable/icon_airplane"
                android:text="@string/Buscar" />
        </GridLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/resultado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </HorizontalScrollView>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>